--- a/Avtotest/Views/Tickets/Index.cshtml
+++ b/Avtotest/Views/Tickets/Index.cshtml
@@ -1,8 +1,14 @@
-﻿
+﻿@model Avtotest.Repository.JsonRepostiory
 @{
+    int ticketCount = Model.GetTicketCount();
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
+<div class="d-grid gap-2">
+    @for (int i = 0; i < ticketCount; i++)
+    {
+        int index = i + 1; 
+        <a asp-action="Qustion" asp-route-id="@i" class="btn btn-outline-secondary">Ticket @index</a> 
+    }
+</div>
